compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unexpected_arg_with_label_shorthand.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 878
expression: "\n    fn id(x) { x }\n    fn y() {\n        let x = 4\n        id(x:)\n    }\n"
snapshot_kind: text
---
----- SOURCE CODE

    fn id(x) { x }
    fn y() {
        let x = 4
        id(x:)
    }


----- ERROR
error: Unexpected labelled argument
  ┌─ /src/one/two.gleam:5:12
  │
5 │         id(x:)
  │            ^^

This argument has been given a label but the constructor does
not expect any. Please remove the label `x`.
