compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_field.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 606
expression: "fn(a: a) { a.field }"
snapshot_kind: text
---
----- SOURCE CODE
fn(a: a) { a.field }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:1:14
  │
1 │ fn(a: a) { a.field }
  │              ^^^^^ This field does not exist

The value being accessed has this type:

    a

It does not have any fields.
