compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_field_that_appears_in_an_imported_variant_has_note.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2427
expression: "\nimport some_mod\npub fn main(wibble: some_mod.Wibble) {\n  wibble.field\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- some_mod.gleam
pub type Wibble {
              Wibble(field: Int)
              Wobble(not_field: String, field: Int)
            }

-- main.gleam

import some_mod
pub fn main(wibble: some_mod.Wibble) {
  wibble.field
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:4:10
  │
4 │   wibble.field
  │          ^^^^^ This field does not exist

The value being accessed has this type:

    some_mod.Wibble

It does not have fields that are common across all variants.

Note: The field you are trying to access is not defined consistently across
all variants of this custom type. To fix this, ensure that all variants
include the field with the same name, position, and type.
