compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_field_update.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1618
expression: "\n pub type Person {\n   Person(name: String)\n }\n pub fn update_person(person: Person) {\n   Person(..person, one: 5)\n }"
snapshot_kind: text
---
----- SOURCE CODE

 pub type Person {
   Person(name: String)
 }
 pub fn update_person(person: Person) {
   Person(..person, one: 5)
 }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:6:21
  │
6 │    Person(..person, one: 5)
  │                     ^^^^^^ Did you mean `name`?

The value being accessed has this type:

    Person

It has these accessible fields:

    .name
