compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_module.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 246
expression: import xpto
snapshot_kind: text
---
----- SOURCE CODE
import xpto

----- ERROR
error: Unknown module
  ┌─ /src/one/two.gleam:1:1
  │
1 │ import xpto
  │ ^^^^^^^^^^^

No module has been found with the name `xpto`.
